iac/local/flink/flink-worker-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flink-taskmanager
spec:
  replicas: 6
  serviceName: flink-taskmanager
  selector:
    matchLabels:
      app: flink-taskmanager # Match labels between selector and template
  template:
    metadata:
      labels:
        app: flink-taskmanager
    spec:
      hostname: flink-taskmanager
      # initContainers:
      #   - name: init-staging
      #     image: busybox
      #     command: ['sh', '-c', 'mkdir -p /tmp/staged && chmod 777 /tmp/staged']
      #     volumeMounts:
      #     - name: flink-staging
      #       mountPath: /tmp
      volumes:
      - name: flink-config-volume
        configMap:
          name: flink-config
          items:
          - key: flink-conf.yaml
            path: flink-conf.yaml
          - key: log4j-console.properties
            path: log4j-console.properties
      - name: flink-staging
        persistentVolumeClaim:
          claimName: staging-artifacts-claim
      containers:
      - name: flink-taskmanager
        image: flink:1.18.1-with-python
        args: ["taskmanager"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6122
          name: rpc
        - containerPort: 6125
          name: query-state
        - containerPort: 9250
          name: metrics
        - containerPort: 50000
          name: pool          
        livenessProbe:
          tcpSocket:
            port: 6122
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf
          - name: flink-staging
            mountPath: /tmp/beam-artifact-staging
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
      - name: beam-python-sidecar
        image: apache/beam_python3.9_sdk:2.60.0
        args: ["--worker_pool"]
        ports:
          - containerPort: 50000
            name: beam-port
        volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf
          - name: flink-staging
            mountPath: /tmp/beam-artifact-staging
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
