iac/local/flink/flink-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
  labels:
    app: flink
    component: flink-jobmanager
spec:
  ports:
    - name: rpc
      port: 6123
      targetPort: 6123
    - name: blob
      port: 6124
      targetPort: 6124
    - name: ui
      port: 8081
      targetPort: 8081
  selector:
    app: flink
    component: flink-jobmanager
