iac/local/flink/flink-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-taskmanager
  labels:
    app: flink
    component: flink-taskmanager
spec:
  clusterIP: None
  selector:
    app: flink
    component: flink-taskmanager
  ports:
    - name: data1
      port: 6121
      targetPort: 6121
    - name: rpc
      port: 6122
      targetPort: 6122
